Huge changes(added jwt, working login and register

--- a/smart_librarian/templates/index.html
+++ b/smart_librarian/templates/index.html
@@ -31,5 +31,6 @@
 
     <br>
     <a href="/auth/login">Login</a> | <a href="/auth/register">Register</a>
+    <a href="/auth/logout">Logout</a>
 </body>
 </html>
